force-app/main/default/objects/KimbleOne__UnitTypeConversion__c/KimbleOne__UnitTypeConversion__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Unit Type Conversion</label>
    <nameField>
        <label>UnitTypeConversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Type Conversion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>