force-app/main/default/objects/KimbleOne__UnitTypeConversion__c/fields/KimbleOne__ConversionFactor__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ConversionFactor__c</fullName>
    <label>ConversionFactor</label>
    <precision>18</precision>
    <required>true</required>
    <scale>10</scale>
    <type>Number</type>
</CustomField>