force-app/main/default/objects/KimbleOne__UnitTypeConversion__c/fields/KimbleOne__FromUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FromUnitType__c</fullName>
    <label>From Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Unit Type Conversion</relationshipLabel>
    <relationshipName>UnitTypeConversionFrom</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>