force-app/main/default/objects/KimbleOne__UnitTypeConversion__c/fields/KimbleOne__ToUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ToUnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Unit Type Conversion (To Unit Type)</relationshipLabel>
    <relationshipName>UnitTypeConversionTo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>